# cPaiNN

./: LICENSE  MD_simulation.py  NEB.py  One_hot_calculation.py  README.md  Structure_relax.py  config.toml  forcecurve.py  md_simulation.py  plot_test_relax.py  pyproject.toml  relax.py  run.sh  train.py
NEB/FePO4/NEB/: neb_last.traj
NEB/FePO4/NEB/image_1/: INCAR
NEB/FePO4/NEB/image_2/: OUTCAR
NEB/FePO4/NEB/image_3/: OUTCAR
NEB/FePO4/NEB/image_4/: OUTCAR
NEB/FePO4/NEB/image_5/: INCAR  OUTCAR
NEB/FePO4/initial/: INCAR
NEB_example/FePO4/NEB/image_1/: OUTCAR
NEB_example/FePO4/NEB/image_2/: INCAR
NEB_example/FePO4/NEB/image_3/: IBZKPT  INCAR
NEB_example/FePO4/NEB/image_4/: INCAR
NEB_example/FePO4/initial/: KPOINTS
Relax_examples/: one_hot_example.xyz
Relax_examples/Na2FeMnNiSiO4/: IBZKPT  INCAR  KPOINTS
Relax_examples/NaFeMnCoNiSO4/: IBZKPT  INCAR
cPaiNN/: calculator.py  data.py  model.py  relax.py
